tests/pass/test_sema_move_ok.tk
shape Rect (w: i32, h: i32)

import std/io::println

fn main() -> i32 {
    auto ^r1 = new Rect(w=1, h=1)
    auto ^r2 = ^r1 // Move
    
    // r2 is valid
    auto x = r2.w // OK
    println("Move OK: x is {}", x)
    return 0
}
